--- a/davidb_art2602_hart/index.html
+++ b/davidb_art2602_hart/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <header>
-        <title>3pages project</title>
+        <title>codebased drawing project</title>
     </header>
 
     <body>
