added process book (still need images)

--- a/daviddb_art2602_mbs/mind-body-spirit.html
+++ b/daviddb_art2602_mbs/mind-body-spirit.html
@@ -9,6 +9,7 @@
         <image src="" href="body.html">Body.</image>
         <image src="" href="mind.html">Mind.</image>
         <image src="" href="spirit.html">Spirit.</image>
+        <a href="berthperez_d_mbsprocessFINAL.pdf">Process Book</a>
     </body>
 
 </html>
