--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <a href="davidb_art2602_3page/index.html">| 3 PagesProject |</a>
         <a href="davidb_art2602_hart/index.html">| Codebased drawing |</a>
+        <a href="davidb_art2602_mbs/index.html">| 'Mind. Body. Spirit.' Collage |</a>
     
     </body>
 
