--- a/daviddb_art2602_mbs/mind-body-spirit.html
+++ b/daviddb_art2602_mbs/mind-body-spirit.html
@@ -5,11 +5,41 @@
         <title>"Mind. Body. Spirit." Collage</title>
     </header>
 
-    <body>
-        <image src="" href="body.html">Body.</image>
-        <image src="" href="mind.html">Mind.</image>
-        <image src="" href="spirit.html">Spirit.</image>
-        <a href="berthperez_d_mbsprocessFINAL.pdf">Process Book</a>
+    <h1>MBS Collage</h2>
+
+    <b>
+    <body style="background-color:rgba(184, 226, 212, 0.781);
+    font-family: cursive;
+    font-size:x-large;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;">
+        <div>
+            <p style="position: relative;
+            right: 100px;
+            top: 100px;">Body.</p>
+            <a href="body.html"><image src="images/body.jpg"; href="body.html"></a>
+        </div>
+        
+        <div>
+            <p style="position: relative;
+            left: 400px;
+            top: 100px;">Mind.</p>
+            <a href="mind.html"><image src="images/mind.jpg"; href="mind.html"></a>
+        </div>
+        
+        <div>
+            <p style="position: relative;
+            right: 110px;
+            top: 100px;">Spirit.</p>
+            <a href="spirit.html"><image src="images/spirit.jpg"></a>
+        </div>
+
+        <div>
+            <br>
+            <a href="berthperez_d_mbsprocessFINAL.pdf";>Process Book</a>
+        </div>
     </body>
 
 </html>
