--- a/daviddb_art2602_mbs/mind.html
+++ b/daviddb_art2602_mbs/mind.html
@@ -6,7 +6,10 @@
     </header>
 
     <body>
-        <image src="">Mind.</image>
+        <body">
+            <image src="images/mindFULL.jpg">
+            <a href="mindy-body-spirit.html">Go back</a>
+        </body>
     </body>
 
 </html>
