--- a/daviddb_art2602_mbs/spirit.html
+++ b/daviddb_art2602_mbs/spirit.html
@@ -5,8 +5,9 @@
         <title>spirit image full</title>
     </header>
 
-    <body>
-        <image src="">Spirit.</image>
+    <body style="background-color: rgba(250, 245, 245);">
+        <image src="images/spiritFULL.jpg">
+        <a href="mindy-body-spirit.html">Go back</a>
     </body>
 
 </html>
