--- a/daviddb_art2602_mbs/body.html
+++ b/daviddb_art2602_mbs/body.html
@@ -6,7 +6,10 @@
     </header>
 
     <body>
-        <image src="">Body.</image>
+        <body style="background-color: rgb(0, 0, 0);">
+            <image src="images/bodyFULL.jpg">
+            <a href="mindy-body-spirit.html">Go back</a>
+        </body>
     </body>
 
 </html>
