fixed another pathing typo

--- a/davidb_art2602_mbs/body.html
+++ b/davidb_art2602_mbs/body.html
@@ -8,7 +8,7 @@
     <body>
         <body style="background-color: rgb(0, 0, 0);">
             <image src="images/bodyFULL.jpg">
-            <a href="mindy-body-spirit.html">Go back</a>
+            <a href="mind-body-spirit.html">Go back</a>
         </body>
     </body>
 
