--- a/davidb_art2602_mbs/mind.html
+++ b/davidb_art2602_mbs/mind.html
@@ -8,7 +8,7 @@
     <body>
         <body">
             <image src="images/mindFULL.jpg">
-            <a href="mindy-body-spirit.html">Go back</a>
+            <a href="mind-body-spirit.html">Go back</a>
         </body>
     </body>
 
