--- a/davidb_art2602_mbs/spirit.html
+++ b/davidb_art2602_mbs/spirit.html
@@ -7,7 +7,7 @@
 
     <body style="background-color: rgba(250, 245, 245);">
         <image src="images/spiritFULL.jpg">
-        <a href="mindy-body-spirit.html">Go back</a>
+        <a href="mind-body-spirit.html">Go back</a>
     </body>
 
 </html>
