added netart index

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="davidb_art2602_3page/index.html">| 3 PagesProject |</a>
         <a href="davidb_art2602_hart/index.html">| Codebased drawing |</a>
         <a href="davidb_art2602_mbs/index.html">| 'Mind. Body. Spirit.' Collage |</a>
+        <a href="davidb_art2602_netart/index.html">| NET.Art |</a>
     
     </body>
 
