finished netart webpages

--- a/davidb_art2602_netart/index.html
+++ b/davidb_art2602_netart/index.html
@@ -1,12 +1,86 @@
 <!DOCTYPE html>
-
 <html>
-    <header>
-        <title>net.art project</title>
-    </header>
+    <head>
+        <title>netart homepage</title>
+        <style>
+            #container{
+                color: white;
+                position: relative;
+                height: 800px;
+                width: 1200px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            #header{
+                position: relative;
+                text-align: center;
+            }
+
+            #textwall{
+                position: relative;
+                margin-left: 200px;
+                text-align: left;
+            }
+
+            #border-line {
+            position: absolute;
+            height: 320px;
+            width: 1px;
+            left: 180px;
+            top: 200px;
+            background-color: rgb(255, 255, 255);
+            }
+
+            #credits {
+                position: relative;
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+                color: white;
+            }
+            
+        </style>
+    </head>
     
-    <body>
-        <a href="netart.html">NET.Art Homepage</a> <!-- Filler Space for net art -->
+    <body style="background-color: black;">
+        <div id="container">
+            <div id ="header">
+                <h2 style="margin-left: 25px;">======================</h2>
+                <h1>=NET.Art News Adventurer=</h1>
+                <h2 style="margin-left: 25px;">======================</h2><br><br>
+            </div>
+
+            <div id="border-line"></div>
+
+            <div id="textwall">
+                <b>Start your journey?</b> <br><br>
+                <b style="margin-left: 20px;">></b>Start Journey <br><br>
+
+                <b>The year is 2022. The age is ongoing in events that shock the average individual<br>
+                either positvely or negatively. You are a part of this world & deserver to know more<br>
+                about what is happening and how it should make you feel. Do you proceed?</b><br><br>
+                <b style="margin-left: 20px;">></b>Proceed down rabbithole<br><br>
+
+                <b>You are presented with a mashup of topic before you of trending headlines of which<br>
+                even you may recognize. What do you choose?</b><br><br>
+                    <b style="margin-left: 20px;">1):</b>
+                    <a href="path1a.html" style="color:white">World War 3</a><br><br>
+                    <b style="margin-left: 20px;">2):</b>
+                    <a href="path2a.html" style="color:white">Gaming Revival</a><br><br>
+                    <b style="margin-left: 20px;">3):</b>
+                    <a href="path3.html" style="color:white">Slap of The Century</a><br><br><br>
+                    <b style="margin-left: 20px;">></b>
+                    <marquee width="1" scrollamount=".5" scrolldelay="950">|</marquee>
+            </div>
+        </div>
+
+        <div id="credits">
+            Made by David B. || 
+            <a href="" style="color: white;">
+                Proccess book
+            </a>
+        </div>
     </body>
 
 </html>
