updated process book

--- a/davidb_art2602_netart/index.html
+++ b/davidb_art2602_netart/index.html
@@ -77,8 +77,8 @@
 
         <div id="credits">
             Made by David B. || 
-            <a href="" style="color: white;">
-                Proccess book
+            <a href="berthodperez_d_netart_pbv2.pdf" style="color: white;">
+                Proccess Book & Artist Statement
             </a>
         </div>
     </body>
