added cad & electronic pages + modified some previous pages

--- a/davidb_art2602_3page/html2.html
+++ b/davidb_art2602_3page/html2.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<html>
+    <header>
+        HTML 2
+    </header>
+
     <body style="text-align:center; background-color:lemonchiffon">
         <h1>WELCOME!</h1>
         <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">The point of this page is not only for laughs but also for peace ^-^</p>
@@ -11,6 +17,7 @@
 
         <p><a href="html1.html">Go to 'html1'</a></p>
         <p><a href="html3.html">Go to 'html3'</a></p>
+        <p><a href="index.html">Go to 'index'</a></p>
 
         <img src="heyzeus.jpg" alt="Jesus with the pup" height="" width="">
         <img src="sheeshus.png" alt="Jesus with the drip" height="500" width="500">
