--- a/davidb_art2602_3page/index.html
+++ b/davidb_art2602_3page/index.html
@@ -2,13 +2,23 @@
 
 <html>
     <header>
-        <title>3pages project</title>
+        <title>3 Pages Practice (Index)</title>
     </header>
 
-    <body>
-        <a href="html1.html">page1</a>
-        <a href="html2.html">page2</a>
-        <a href="html3.html">page3</a>
+    <body style="color: white; background-color: darkorange;">
+        <h3>
+            Go visit my practice webpages :D
+        </h3>
+
+        <div>
+            <p>Visit <a style="color: white;" href="html1.html">page1</a></p>
+            <p>Visit <a  style="color: white;"href="html2.html">page2</a></p>
+            <p>Visit <a  style="color: white;"href="html3.html">page3</a></p>
+        </div>
+
+        <div>
+            Go back <a  style="color: white;"href="../index.html">home</a>
+        </div>
     </body>
 
 </html>
