--- a/davidb_art2602_netart/index.html
+++ b/davidb_art2602_netart/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>netart homepage</title>
+        <title>NET.ART Homepage</title>
+
         <style>
             #container{
                 color: white;
@@ -80,6 +81,8 @@
             <a href="berthodperez_d_netart_pbv2.pdf" style="color: white;">
                 Proccess Book & Artist Statement
             </a>
+
+            <br><br>Go back <a  style="color: white;"href="../index.html">home</a>?
         </div>
     </body>
 
