--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <header>
-        <title>David Portfolio</title>
+        <title>David B.'s Portfolio</title>
     </header>
 
     <body style="background-color:rgb(238, 107, 107);
@@ -33,10 +33,13 @@
 
         </div>
 
-        <a href="davidb_art2602_3page/index.html">| 3 PagesProject |</a>
+        <a href="davidb_art2602_3page/index.html">| 3 Pages Practice |</a>
         <a href="davidb_art2602_hart/index.html">| Codebased drawing |</a>
         <a href="davidb_art2602_mbs/index.html">| 'Mind. Body. Spirit.' Collage |</a>
         <a href="davidb_art2602_netart/index.html">| NET.Art |</a>
+        <br>
+        <a href="davidb_art2602_electronics/index.html">| Electronics Workshop |</a>
+        <a href="davidb_art2602_cad/index.html">| CAD Workshop |</a>
     
     </body>
 
