--- a/davidb_art2602_3page/html1.html
+++ b/davidb_art2602_3page/html1.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<html>
+    <header>
+        HTML 1
+    </header>
+
     <body style="text-align:center; background-color: rgb(#FFFFFF);">
         <h1>This is a Test for HEADER</h1>
         <p>See how easy it easy to fill this paragrap text?</p>
@@ -8,6 +14,7 @@
 
         <p><a href="html2.html">Go to 'html2'</a></p>
         <p><a href="html3.html">Go to 'html3'</a></p>
+        <p><a href="index.html">Go to 'index'</a></p>
 
         <img src="hmm.jpg" alt="How do work" height="" width="">
         <img src="hrr.jpg" alt="How maybe do work" height="" width="">
