--- a/davidb_art2602_3page/html3.html
+++ b/davidb_art2602_3page/html3.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<html>
+    <header>
+        HTML 3
+    </header>
+
     <body style="text-align:center; background-color:rgb(60, 35, 82); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
         <h1 style="color:rgb(228, 250, 255)">Is this the conclusion?</h1>
         <p style="color:lightsalmon">Is this the end? The finally? The summary of events? The pause to our game?</p>
@@ -7,6 +13,7 @@
         <p style="color:lightsalmon">For all we know I could be behind you. Ready to continue . . .</p>
         <p><a href="html1.html" style="color:lightgreen">Go to 'html1'</a></p>
         <p><a href="html2.html" style="color:lightgreen">Go to 'html2'</a></p>
+        <p><a href="index.html">Go to 'index'</a></p>
 
         <img src="redHouse.png" alt="How we know" height="480" width="650">
         <img src="stranded.jpg" alt="What is out there" height="480" width="650">
