--- a/davidb_art2602_3page/html3.html
+++ b/davidb_art2602_3page/html3.html
@@ -13,9 +13,9 @@
         <p style="color:lightsalmon">For all we know I could be behind you. Ready to continue . . .</p>
         <p><a href="html1.html" style="color:lightgreen">Go to 'html1'</a></p>
         <p><a href="html2.html" style="color:lightgreen">Go to 'html2'</a></p>
-        <p><a href="index.html">Go to 'index'</a></p>
+        <p><a href="index.html" style="color:lightgreen">Go to 'index'</a></p>
 
-        <img src="redHouse.png" alt="How we know" height="480" width="650">
+        <img src="redHouse.PNG" alt="How we know" height="480" width="650">
         <img src="stranded.jpg" alt="What is out there" height="480" width="650">
     </body>
 </html>
